# flux-studio

./: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.flux-studio/: recent_files.json
src/flux_studio/: __init__.py  app.py
src/flux_studio/agents/: __init__.py  agent_panel.py  agent_protocol.py  agent_registry.py  file_comm.py
src/flux_studio/editor/: file_operations.py  markdown_editor.py
tests/: test_agent_config.py  test_agents.py  test_editor.py
